--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,21 @@ body {
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
 }
+
+@layer components {
+  .btn-primary {
+    @apply px-6 py-2 md:px-8 md:py-3;
+    @apply inline-flex items-center justify-center;
+    @apply rounded-md bg-black  text-gray-400;
+    @apply hover:bg-gray-950 transition-all duration-300 mt-6;
+    @apply transition-all duration-500;
+  }
+
+  .btn-outline {
+    @apply px-6 py-2 md:px-8 md:py-3;
+    @apply inline-flex items-center justify-center;
+    @apply rounded-md border  border-neutral-600 text-gray-400;
+    @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
+    @apply transition-all duration-500;
+  }
+}
