--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
   }
 
   .btn-outline {
-    @apply px-6 py-2 md:px-8 md:py-3;
+    @apply px-8 py-3;
     @apply inline-flex items-center justify-center;
     @apply rounded-md border  border-neutral-600 text-gray-200;
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
