Fixed some minor issues

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   padding: 0;
   box-sizing: border-box;
   font-family: "Lato", sans-serif;
+  list-style: none;
 }
 
 @layer components {
