--- a/src/index.css
+++ b/src/index.css
@@ -29,4 +29,11 @@ body {
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
     @apply transition-all duration-500;
   }
+  .btn-sm {
+    @apply px-3 py-1;
+    @apply inline-flex items-center justify-center;
+    @apply rounded-md border  border-neutral-600 text-gray-200;
+    @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
+    @apply transition-all duration-500;
+  }
 }
