--- a/src/index.css
+++ b/src/index.css
@@ -15,10 +15,10 @@ body {
 
 @layer components {
   .btn-primary {
-    @apply px-6 py-2 md:px-8 md:py-3;
+    @apply px-8 py-3;
     @apply inline-flex items-center justify-center;
     @apply rounded-md bg-black  text-gray-200;
-    @apply hover:bg-gray-950 transition-all duration-300 mt-6;
+    @apply hover:bg-gray-950 transition-all duration-300;
     @apply transition-all duration-500;
   }
 
