--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ body {
   .btn-outline {
     @apply px-8 py-3;
     @apply inline-flex items-center justify-center;
-    @apply rounded-md border  border-neutral-600 text-gray-200;
+    @apply rounded-md border  border-neutral-600 text-white;
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
     @apply transition-all duration-500;
   }
