--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
   .btn-primary {
     @apply px-8 py-3;
     @apply inline-flex items-center justify-center;
-    @apply rounded-md bg-black  text-gray-200;
+    @apply rounded-md bg-black  text-white;
     @apply hover:bg-gray-950 transition-all duration-300;
     @apply transition-all duration-500;
   }
@@ -25,14 +25,14 @@ body {
   .btn-outline {
     @apply px-8 py-3;
     @apply inline-flex items-center justify-center;
-    @apply rounded-md border  border-neutral-600 text-white;
+    @apply rounded-md border  border-white text-white;
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
     @apply transition-all duration-500;
   }
   .btn-sm {
     @apply px-3 py-1;
     @apply inline-flex items-center justify-center;
-    @apply rounded-md border  border-neutral-600 text-gray-200;
+    @apply rounded-md border  border-white text-white;
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
     @apply transition-all duration-500;
   }
