Added contact section

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ html {
   .btn-primary {
     @apply px-8 py-3;
     @apply inline-flex items-center justify-center;
-    @apply rounded-md bg-black  text-white;
+    @apply rounded-sm bg-black  text-white;
     @apply hover:bg-gray-950 transition-all duration-300;
     @apply transition-all duration-500;
   }
@@ -30,14 +30,14 @@ html {
   .btn-outline {
     @apply px-8 py-3;
     @apply inline-flex items-center justify-center;
-    @apply rounded-md border  border-white text-white;
+    @apply rounded-sm border  border-white text-white;
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
     @apply transition-all duration-500;
   }
   .btn-sm {
     @apply px-3 py-1;
     @apply inline-flex items-center justify-center;
-    @apply rounded-md border  border-white text-white;
+    @apply rounded-sm border  border-white text-white;
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
     @apply transition-all duration-500;
   }
