--- a/src/index.css
+++ b/src/index.css
@@ -30,9 +30,9 @@ html {
   .btn-outline {
     @apply px-8 py-3;
     @apply inline-flex items-center justify-center;
-    @apply rounded-sm border  border-white text-white;
+    @apply rounded-md border border-white text-white;
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
-    @apply transition-all duration-500;
+    @apply transition-all duration-500 ease-in-out;
   }
   .btn-sm {
     @apply px-3 py-1;
