--- a/src/index.css
+++ b/src/index.css
@@ -35,9 +35,9 @@ html {
     @apply transition-all duration-500 ease-in-out;
   }
   .btn-sm {
-    @apply px-3 py-1;
+    @apply px-3 py-2;
     @apply inline-flex items-center justify-center;
-    @apply border border-[#333] rounded-md text-white;
+    @apply border border-[#333] rounded-md text-white text-sm;
     @apply hover:border-[#FF5D56] hover:text-[#FF5D56];
     @apply transition-all duration-500;
   }
